--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+        <!-- SEO -->
+    <title>Список задач — Vibe Todo</title>
+    <meta name="description" content="Веб-приложение для управления списком задач." />
+    <meta name="keywords" content=" Vite, React, тестовое задание, ToDo, Список задач" />
+    <meta name="author" content="Intern Task" />
   </head>
   <body>
     <div id="root"></div>
